# zomato

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
config/: app.toml  column_mapping.json
doc/: architecture.md  decisions.md  deploymentPlan.md  edgecase.md  implementation-plan.md  problemStatement.md
src/zomato_recsys/: __init__.py  cli.py  orchestrator.py
src/zomato_recsys.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/zomato_recsys/api/: server.py
src/zomato_recsys/api/static/: index.html
src/zomato_recsys/data/: catalog.py  ingestion.py  models.py
src/zomato_recsys/filters/: engine.py
src/zomato_recsys/llm/: adapter.py  prompts.py
src/zomato_recsys/validation/: response.py
tests/: conftest.py  test_catalog.py  test_filters.py  test_llm.py  test_orchestrator.py
