[project]
name = "zomato_recsys"
version = "0.1.0"
description = "AI-assisted restaurant discovery and recommendation system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "datasets>=3.0.0",
    "huggingface_hub>=0.24.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "streamlit>=1.32.0",
    "jinja2>=3.0.0",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
  ]

[project.scripts]
zomato-recsys = "zomato_recsys.cli:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
